--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ img{
     width: 15rem;
 }
 
-#myGameSpaceWorld {
+/* #myGameSpaceWorld {
     align-content: center;
     justify-content: center;
-}
+} */
