--- a/src/style.css
+++ b/src/style.css
@@ -8,21 +8,18 @@ img{
 
 h1{
     color: white;
-    margin-left: 20%;
+    text-align: center;
     padding-top: 5px;
     margin-bottom: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #TheeGameSpace{
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 0px;
     width: fit-content;
     background-color: black;
-
-    /* align-self: center; */
-    /* justify-self: center;    //this code just dont work */
 }
 
 body{
