--- a/src/style.css
+++ b/src/style.css
@@ -1,41 +1,50 @@
 img{
-    align-self: center;
-    justify-self: center;      /*this code just dont work*/
     margin: 1rem;
-    height: 13rem;
-    width: 13rem;
+    height: 9rem;
+    width: 10rem;
 }
 
-p, h1{
+h1{
     color: white;
     text-align: center;
-    padding-top: 5px;
-    margin-bottom: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    grid-area: 1 / 1 / span 1 / span 2;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+p{ 
+     text-align: end;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding-right: 0.5rem;
 }
 
 #TheeGameSpace{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 0px;
     width: fit-content;
+    height: fit-content;
     background-color: rgba(0, 0, 0, 0.432);
+    display: grid;
+    grid-gap: 0.7rem;
 }
 
 #gameInfo{
-    grid-template-columns: auto auto;
+    color:  white;
     font-size: 25px;
-    display: grid;
+    grid-area: 2 / 1 / span 1 / span 1 ;
+    border: solid;
+    border-color: black;
+    margin-left: 1rem;
 }
 
 #heading{
-    grid-area: 1 / 1/ span 1/ span 2;
+    font-weight: bold;
+    text-align: center;
+    border-bottom: 0.2rem;
+    border-bottom-style: solid;
+    border-bottom-color: black;
 }
-
-#timeRemaining{
-    grid-area: 2 / 1 / span 1/ span 1;
-}
-
 
 body{
     margin-top: 0;
@@ -44,10 +53,15 @@ body{
 
 #restartGame{
     font-size: 1.5rem;
-    margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
-    width: 40%;
-    height: 5%;
     margin-left: 30%;
     margin-right: 30%;
+    width: 40%;
+    grid-area: 3 / 1 / span 1 / span 2;
+}
+
+#activeWorld{
+    justify-content: center;
+    grid-area: 2 / 2;
+    border: solid;
+    margin-right: 1rem;
 }
