cool upgrades  but no spec working

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ p{
 
 body{
     margin-top: 0;
-    background: rgba(80, 202, 161, 0.699);
+    background: rgba(107, 222, 226, 0.89);
 }
 
 #restartGame{
@@ -64,4 +64,25 @@ body{
     grid-area: 2 / 2;
     border: solid;
     margin-right: 1rem;
+}
+
+#selectMode{
+    padding: 10%;
+    text-align: center;
+}
+
+#Overlay{
+    position: fixed; /* Sit on top of the page content */
+    display: block; /* Hidden by default */
+    width: 100%; /* Full width (cover the whole page) */
+    height: 100%; /* Full height (cover the whole page) */
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
+    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer; /* Add a pointer on hover */
+    padding-top: 25%;
+    font-size: xx-large;
 }
