--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,10 @@
-img{
+img {
     margin: 1rem;
     height: 9rem;
     width: 10rem;
 }
 
-h1{
+h1 {
     color: white;
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -13,13 +13,13 @@ h1{
     margin-bottom: 0;
 }
 
-p{ 
-     text-align: end;
+p {
+    text-align: end;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-right: 0.5rem;
 }
 
-#TheeGameSpace{
+#TheeGameSpace {
     margin-left: auto;
     margin-right: auto;
     width: fit-content;
@@ -29,16 +29,16 @@ p{
     grid-gap: 0.7rem;
 }
 
-#gameInfo{
-    color:  white;
+#gameInfo {
+    color: white;
     font-size: 25px;
-    grid-area: 2 / 1 / span 1 / span 1 ;
+    grid-area: 2 / 1 / span 1 / span 1;
     border: solid;
     border-color: black;
     margin-left: 1rem;
 }
 
-#heading{
+#heading {
     font-weight: bold;
     text-align: center;
     border-bottom: 0.2rem;
@@ -46,12 +46,12 @@ p{
     border-bottom-color: black;
 }
 
-body{
+body {
     margin-top: 0;
     background: rgba(107, 222, 226, 0.89);
 }
 
-#restartGame{
+#restartGame {
     font-size: 1.5rem;
     margin-left: 30%;
     margin-right: 30%;
@@ -59,30 +59,50 @@ body{
     grid-area: 3 / 1 / span 1 / span 2;
 }
 
-#activeWorld{
+#activeWorld {
     justify-content: center;
     grid-area: 2 / 2;
     border: solid;
     margin-right: 1rem;
 }
 
-#selectMode{
+#selectMode {
     padding: 10%;
     text-align: center;
 }
 
-#Overlay{
-    position: fixed; /* Sit on top of the page content */
-    display: block; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+#Overlay {
+    position: fixed;
+    /* Sit on top of the page content */
+    display: block;
+    /* Hidden by default */
+    width: 100%;
+    /* Full width (cover the whole page) */
+    height: 100%;
+    /* Full height (cover the whole page) */
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
-    padding-top: 25%;
+    background-color: rgba(0, 0, 0, 0.747);
+    /* Black background with opacity */
+    z-index: 2;
+    /* Specify a stack order in case you're using a different order for other elements */
+    cursor: pointer;
+    /* Add a pointer on hover */
+    padding-top: 20%;
     font-size: xx-large;
+    font-weight: bold;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.767);
+}
+
+input {
+    width: 20vh;
+    height: 5vh;
+}
+
+#playerName {
+    width: 40vh;
 }
